<resources>
    <!-- ... -->
    <string name="welcome_image_description">Welcome image</string>
    <string name="welcome_text">Welcome to your mental health journey</string>
    <string name="start_journey_button_text">Start your journey</string>
    <string name="welcome">Welcome\n</string>

    <string name="app_name">MindEase</string>
    <string name="title">Begin your mental wellness journey         with us today</string>
    <string name="create_account">Create account</string>
    <string name="log_in">Log in</string>
    <string name="title_app">Welcome to \n MindEase</string>
    <string name="large_text">Your large text here</string>
    <string name="already_an_user_login">Already an user? Login</string>

    <string name="appname">YouTube</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join">Join</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>

</resources>