<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="47dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1b1b1b"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:layout_below="@id/welcome"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/welcome_text"
        android:textColor="#1b1b1b"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="331dp"
        android:layout_height="294dp"
        android:layout_below="@id/welcome_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/welcome_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/pic2" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/join"
        android:textSize="23sp"
        android:textColor="#ffffff"
        android:onClick="onJoinButtonClicked" />

</RelativeLayout>
