<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk1">


    <ImageView
        android:id="@+id/mindEaseLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/mind_ease_logo" />

    <TextView
        android:id="@+id/title_app"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_below="@id/mindEaseLogo"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-2dp"

        android:gravity="center"
        android:text="@string/title_app"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_below="@id/mindEaseLogo"
        android:gravity="center"
        android:layout_marginTop="114dp"

        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="normal"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_alignParentStart="false"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_background"
        android:padding="12dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="onSignButtonClicked"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountButton"
        android:layout_alignParentStart="false"

        android:layout_alignParentBottom="false"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_background"
        android:padding="12dp"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="onLoginButtonClicked"/>

</RelativeLayout>